# SoMeThingAPI

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: post.py  user.py
app/core/: config.py  exceptions.py  logging.py
app/db/: schema.py
app/models/: post.py  user.py
app/services/: post_service.py  user_service.py
tests/: conftest.py  test_db.py
tests/api/v1/: test_post.py  test_user.py
